# ThermalCFM

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: baseline.yaml  cfm.yaml  dataset.yaml  default.yaml  flash.yaml  forward_model.yaml  tdtr.yaml  three_omega.yaml
scripts/: evaluate.py  generate_dataset.py  reflow.py  train_baseline.py  train_cfm.py  visualize.py
src/thermal_flow/: __init__.py
src/thermal_flow/baselines/: __init__.py  feldman.py  krr.py  mlp.py  tikhonov.py
src/thermal_flow/data/: __init__.py  dataset.py  transforms.py
src/thermal_flow/evaluation/: __init__.py  metrics.py  resolution_limit.py
src/thermal_flow/forward/: __init__.py  base.py  borca_tasciuc.py  flash.py  noise.py  profiles.py  tdtr.py
src/thermal_flow/inference/: __init__.py  sampler.py  uncertainty.py
src/thermal_flow/models/: __init__.py  flow_matching.py  physics_loss.py  rectified_flow.py  velocity_net.py
src/thermal_flow/utils/: __init__.py  config.py  logging.py
tests/: test_dataset.py  test_flow_matching.py  test_forward.py
